--- a/css/style.scss
+++ b/css/style.scss
@@ -682,6 +682,7 @@ header{
                     @include fontsize(12);
                     color: $subcolor1;
                     text-align: center;
+                    padding: 0;
                } 
                
                .center_right_td{
@@ -690,6 +691,7 @@ header{
                     @include fontsize(12); 
                     color: $subcolor1;
                     text-align: center;
+                    padding: 10px;
                }
                
                .white_td{
